ettercap (1:0.8.0-0kali1) kali; urgency=low

  * New upstream release.
  * Drop Debian specific patches:
    - 0001-desktop.patch: upstream uses pkexec by default now, no need to use
      su-to-root, thus drop dep on menu and add dep on policykit-1
    - 0002-centre-scalable-icon.patch: merged upstream

 -- Raphaël Hertzog <hertzog@debian.org>  Mon, 30 Sep 2013 21:17:08 +0200

ettercap (1:0.7.6-1kali0) kali; urgency=low

  * Import ettercap from testing

 -- Mati Aharoni <muts@kali.org>  Mon, 09 Sep 2013 07:01:22 -0400

ettercap (1:0.7.6-1) unstable; urgency=low

  [ Gianfranco Costamagna ]
  * New upstream version
  * Dropped version dependency for curl (fixed in cmake)

  [ Barak A. Pearlmutter ]
  * Tweak debian/watch to point to official upstream only

 -- Barak A. Pearlmutter <bap@debian.org>  Wed, 27 Mar 2013 11:44:17 +0000

ettercap (1:0.7.5.3-2) unstable; urgency=low

  * tweak debian/rules to enable IPv6 with libnet 1.1.6 or greater

 -- Barak A. Pearlmutter <bap@debian.org>  Mon, 25 Feb 2013 22:34:29 +0000

ettercap (1:0.7.5.3-1) unstable; urgency=low

  * New upstream version

 -- Barak A. Pearlmutter <bap@debian.org>  Sat, 02 Feb 2013 18:33:19 +0000

ettercap (1:0.7.5.2-2) unstable; urgency=low

  * Merge ongoing upstream mods per upstream request
    - version number
    - changelog
    - options --certificate and --private-key

 -- Barak A. Pearlmutter <bap@debian.org>  Wed, 30 Jan 2013 15:53:55 +0000

ettercap (1:0.7.5.2-1) unstable; urgency=low

  * New upstream release

 -- Barak A. Pearlmutter <bap@debian.org>  Tue, 29 Jan 2013 16:01:52 +0000

ettercap (1:0.7.5.1-3) unstable; urgency=low

  * remove bogus but harmlessly dead code from patch for CVE-2013-0722

 -- Barak A. Pearlmutter <bap@debian.org>  Thu, 17 Jan 2013 23:19:55 +0000

ettercap (1:0.7.5.1-2) unstable; urgency=low

  * merge upstream patch for CVE-2013-0722 a stack-based buffer overflow
    when parsing hosts list (closes: #697987)